manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-patient-registry
  labels:
    app.kubernetes.io/name: go-patient-registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: go-patient-registry
  template:
    metadata:
      labels:
        app.kubernetes.io/name: go-patient-registry
    spec:
      securityContext:
        {}
      containers:
        - name: cloudsql-proxy
          image: gcr.io/cloudsql-docker/gce-proxy:1.14
          command: [
            "/cloud_sql_proxy",
            "-instances=motim1:europe-west1:kodesmil=tcp:5432",
            "-credential_file=/secrets/cloudsql/credentials.json",
          ]
          securityContext:
            runAsUser: 2  # non-root user
            allowPrivilegeEscalation: false
          volumeMounts:
            - name: cloudsql-instance-credentials
              mountPath: /secrets/cloudsql
              readOnly: true
          ports:
            - name: http
              containerPort: 5432
              protocol: TCP
        - name: go-patient-registry
          image: gcr.io/motim1/go-patient-registry
          imagePullPolicy: Always
          ports:
            - name: admin
              containerPort: 9000
              protocol: TCP
            - name: grpc
              containerPort: 9090
              protocol: TCP
          volumeMounts:
            - name: secrets
              mountPath: "/etc/secrets"
              readOnly: true
          livenessProbe:
            httpGet:
              path: /health
              port: 8081
          readinessProbe:
            httpGet:
              path: /ready
              port: 8081
          resources:
            {}
      volumes:
        - name: secrets
          secret:
            secretName: kodesmil-secret-files
        - name: cloudsql-instance-credentials
          secret:
            secretName: cloudsql-instance-credentials
