manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-patient-registry
  labels:
    app.kubernetes.io/name: go-patient-registry
spec:
  type: ClusterIP
  ports:
    - port: 9090
      targetPort: 9090
      protocol: TCP
      name: grpc
    - port: 9000
      targetPort: 9000
      protocol: TCP
      name: admin
  selector:
    app.kubernetes.io/name: go-patient-registry
